// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`session get 1`] = `
Object {
  "data": "<body><p>empty</p></body>",
  "headers": Object {
    "content-type": "text/html; charset=utf-8",
    "set-cookie": Array [
      "TEST_COOKIE1=1; Path=/; HttpOnly",
      "TEST_COOKIE2=abc; Max-Age=86400; HttpOnly",
    ],
  },
  "saveSession": [Function],
  "status": 200,
}
`;

exports[`session post 1`] = `
Object {
  "data": "<body><p>empty</p></body>",
  "headers": Object {
    "set-cookie": Array [
      "TEST_COOKIE1=3; Path=/; HttpOnly",
      "TEST_COOKIE2=xyz; Max-Age=86400; HttpOnly",
    ],
  },
  "saveSession": [Function],
  "status": 302,
}
`;
